--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -24,7 +24,7 @@
 
 html{
     font-size: 62.4%;
-    overflow: hidden;
+    overflow-x:  hidden;
 }
 
 body{
@@ -202,7 +202,7 @@ header label{
 }
 
 .acerca_de .columna .image{
-    flex: 1 1 30rem;
+    flex: 1 1 40rem;
 }
 
 .acerca_de .columna .image img{
@@ -210,7 +210,7 @@ header label{
 }
 
 .acerca_de .columna .content{
-    flex: 1 1 30rem;
+    flex: 1 1 40rem;
 }
 
 .acerca_de .columna .content h3{
@@ -228,6 +228,253 @@ header label{
     margin-left: 2rem;
 
 }
+
+.suscribete{
+    text-align: center;
+    padding: 5rem 1rem;
+    background: url(../imgs/fondo_sub.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.suscribete h3{
+    color: white;
+    font-size: 3rem;
+    text-transform: uppercase;
+}
+
+.suscribete p{
+    color: whitesmoke;
+    font-size: 1.6rem;
+    margin: 2rem auto;
+    width: 70rem;
+}
+
+.suscribete form{
+    display: flex;
+    max-width: 70rem;
+    border: .2rem solid whitesmoke;
+    padding: .5rem;
+    border-radius: 5rem;
+    margin: 2rem auto;
+    height: 5.5rem;
+}
+
+.suscribete form input[type="email"]{
+    padding: 0 2rem;
+    font-size: 1.7rem;
+    background: none;
+    width: 100%;
+    color: white;
+    text-transform: none;
+    background: none;
+}
+
+.suscribete form input[type="email"]::placeholder{
+    color: whitesmoke;
+    text-transform: capitalize;
+}
+
+.suscribete form input[type="submit"]{
+    background: white;
+    width: 20rem;
+    font-size: 1.7rem;
+    border-radius: 5rem;
+    cursor: pointer;
+}
+
+.suscribete form input[type="submit"]:hover{
+    color: var(--limon);
+}
+
+.opiniones .caja-contenedor{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.opiniones .caja-contenedor .caja{
+    background: white;
+    margin: 1rem;
+    padding: 1rem;
+    text-align: center;
+    position: relative;
+    border: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    flex: 1 1 30rem;
+    border-radius: .5rem;
+}
+
+.opiniones .caja-contenedor .caja .fa-youtube{
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    font-size: 8rem;
+    color: var(--limon);
+    opacity: .3;
+}
+
+.opiniones .caja-contenedor .caja .user img{
+    border-radius: 50%;
+    object-fit: cover;
+    height: 8rem;
+    width: 8rem;
+    margin-top: 2rem;
+}
+
+.opiniones .caja-contenedor .caja .user h3{
+    color: var(--verde);
+    font-size: 2rem;
+}
+
+.opiniones .caja-contenedor .caja .user .stars i{
+    color: var(--verde);
+    font-size: 1.5rem;
+    padding: 1rem 0;
+}
+
+.opiniones .caja-contenedor .caja .comentarios{
+    color: #666;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+
+.precios .caja-contenedor{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.precios .caja-contenedor .caja{
+    flex: 1 1 28rem;
+    margin: 1rem;
+    padding: 1rem;
+    background: white;
+    border: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    border-radius: .5rem;
+    text-align: center;
+    padding-bottom: 3rem;
+}
+
+.precios .caja-contenedor .caja:nth-child(2),
+.precios .caja-contenedor .caja:hover{
+    border: .2rem solid var(--limon);
+}
+
+.precios .caja-contenedor .caja .titulo{
+    color: var(--verde);
+    font-size: 2.5rem;
+    padding-top: 1rem;
+}
+
+.precios .caja-contenedor .caja .tipos{
+    font-size: 4rem;
+    color: var(--limon);
+    padding: 1rem 0;
+}
+
+.precios .caja-contenedor .caja .tipos span{
+    font-size: 2rem;
+}
+
+.precios .caja-contenedor .caja ul{
+    padding: 1rem 0;
+    list-style: none;
+}
+
+.precios .caja-contenedor .caja ul li{
+    font-size: 1.7rem;
+    color: #333;
+    padding: .5rem 0;
+}
+
+.precios .caja-contenedor .caja ul li .fa-check{
+    color:  lightgreen;
+}
+
+.precios .caja-contenedor .caja ul li .fa-xmark{
+    color: red;
+}
+
+.contactos{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-bottom: 4rem;
+}
+
+.contactos .image{
+    flex: 1 1 40rem;
+}
+
+.contactos .image img{
+    width: 100%;
+    padding: 2rem;
+}
+
+.contactos form{
+    flex: 1 1 40rem;
+    padding: 2rem 3rem;
+    border: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    border-radius: .5rem;
+    background: white;
+}
+
+.contactos .heading{
+    text-align: left;
+    padding: 0;
+    padding-bottom: 2rem;
+}
+
+.contactos form .inputcaja{
+    position: relative;
+}
+
+.contactos form .inputcaja input, .contactos form .inputcaja textarea{
+    width: 100%;
+    background: none;
+    color: #333;
+    margin: 1.5rem 0;
+    padding: .5rem 0;
+    font-size: 1.7rem;
+    border-bottom: .1rem solid rgba(0, 0, 0, .1);
+    text-transform: none;
+}
+
+.contactos form .inputcaja textarea{
+    resize: none;
+    height: 13rem;
+}
+
+.contactos form .inputcaja label{
+    position: absolute;
+    top: 1.7rem;
+    left: 0;
+    font-size: 1.7rem;
+    color: #666;
+    transition: .2s linear;
+}
+
+.contactos form .inputcaja input:focus ~ label,
+.contactos form .inputcaja input:valid ~ label,
+.contactos form .inputcaja textarea:focus ~ label,
+.contactos form .inputcaja textarea:valid ~ label{
+    top: -.5rem;
+    font-size: 1.5rem;
+    color: var(--limon);
+}
+
+
+
+
+
+
+
 
 @media(max-width:1200px){
     html{
@@ -298,7 +545,12 @@ header label{
     .acerca_de{
         background-position: right;
     }
+
+    .suscribete p{
+        width: auto;
+    }
 }
+
 
 @media(max-width:450px){
     html{
