--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -287,6 +287,11 @@ header label{
     color: var(--limon);
 }
 
+.suscribete label{
+    color: whitesmoke;
+    font-size: 1.8rem;
+}
+
 .opiniones .caja-contenedor{
     display: flex;
     align-items: center;
@@ -338,6 +343,13 @@ header label{
     color: #666;
     font-size: 1.5rem;
     padding: 1rem;
+}
+
+.opiniones button{
+    padding: 2rem 3rem;
+    border: .1rem solid green;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    border-radius: .5rem;
 }
 
 .precios .caja-contenedor{
